<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_dark"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        />
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/white"
        android:text="@string/sign"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/nonAcc"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/Eng"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/TV"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Eng"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/fr"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Fr"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>